--- a/supreme2/style.css
+++ b/supreme2/style.css
@@ -1,8 +1,7 @@
 /* ******* COMMON ********** */
 html {
   height: 100%;
-  background: url(images/bg.gif) center no-repeat;
-  background-color: black;
+  background: black url(images/bg.gif) center no-repeat;
   background-size: cover;
 }
 body {
@@ -86,6 +85,8 @@ a {
 @keyframes fadein {
   from {
     opacity: 0;
+    left: 0;
+    top:0;
   }
 
   to {
