Выровняли по центру основной блок

--- a/supreme2/style.css
+++ b/supreme2/style.css
@@ -5,10 +5,10 @@ html {
   background-size: cover;
 }
 body {
+  height: 100%;
   font-size: 13px;
   font-family: "Courier New",Courier,Monaco, serif;
   color: white;
-  padding-top: 200px;
 }
 * {
   box-sizing: border-box;
@@ -25,8 +25,11 @@ a {
 
 .container {
   max-width: 300px;
-  margin: 0 auto;
   animation: fadein 1s;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .header, .body, .footer {
@@ -85,8 +88,6 @@ a {
 @keyframes fadein {
   from {
     opacity: 0;
-    left: 0;
-    top:0;
   }
 
   to {
