--- a/pseudoelements/style.css
+++ b/pseudoelements/style.css
@@ -1,14 +1,18 @@
-a {
+ul li {
+  margin-bottom: 5px;
+}
+.link-with-red-square {
   position: relative;
-  padding-left: 33px;
+  padding-left: 15px;
 }
 
-a:before {
+.link-with-red-square:before {
   content: '';
   position: absolute;
   left: 0;
-  background: url(envelope.svg) center no-repeat;
-  background-size: contain;
-  height: 16px;
-  width: 33px;
+  top: 50%;
+  background: red;
+  height: 10px;
+  width: 10px;
+  transform: translateY(-50%);
 }
